# netcup_api

./: Cargo.toml  README.md
docs/: docs.css  docs.html
src/: action.rs  client.rs  de.rs  lib.rs  model.rs  ser.rs  test.rs
