[package]
name = "netcup_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_urlencoded = { version = "0" }
thiserror = { version = "1" }
chrono = { version = "0" }
anyhow = { version = "1" }
reqwest = { version = "0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
simplelog = { version = "0" }
time = { version = "0" }
dotenv = { version = "0" }
